--- a/app/views/spree/shared/_social.html.erb
+++ b/app/views/spree/shared/_social.html.erb
@@ -19,7 +19,7 @@
   </div>
 </div>
 <div id="social-signin-links " class="mt-3">
-  <p class="text-center h4 <%= controller_name === 'checkout' ? 'spree-header spree-mb-large' : 'h4 mb-3' %>">
+  <p class="text-center <%= controller_name === 'checkout' ? 'spree-header spree-mb-large' : ' mb-3' %>">
     <%= Spree.t(:sign_in_through_one_of_these_services) %>
   </p>
   <% user = Spree::User.new %>
